feat: create first administrator in browser with local password policy
